--- a/css/styles.css
+++ b/css/styles.css
@@ -928,7 +928,7 @@ img {
   line-height: 1.7;
   letter-spacing: 0.03em;
   color: var(--accent-color);
-  ransition-property: color;
+  transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
