--- a/sass/components/_regular.scss
+++ b/sass/components/_regular.scss
@@ -1,19 +1,17 @@
-.Regular {
+.regular {
   display: flex;
 }
 
-.Regular-customers {
+.regular-item {
   &:not(:last-child) {
     margin-right: 30px;
   }
-}
-.Regular-customers {
   &:hover {
     color: $accent-color;
   }
 }
 
-.Regular-customers__link {
+.regular-item__link {
   display: block;
   border: 1px solid $Regular;
   padding: 16px 32px;
@@ -22,9 +20,6 @@
   transition-property: fill, border;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.Regular-customers__link {
   &:hover,
   &:focus {
     fill: $accent-color;
