--- a/sass/components/_icon-link.scss
+++ b/sass/components/_icon-link.scss
@@ -3,13 +3,13 @@
   display: flex;
 }
 
-.social-link {
+.social-item {
   &:not(:first-child) {
     margin-left: 10px;
   }
 }
 
-.social-link__content {
+.social-item__link {
   padding: 12px;
   display: block;
   width: 44px;
@@ -19,8 +19,6 @@
   background-color: #fff;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.social-link__content {
   &:hover,
   &:focus {
     background-color: $accent-color;
@@ -29,6 +27,6 @@
   }
 }
 
-.social-link__icon {
+.social__icon {
   fill: currentColor;
 }
