--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,8 +1,8 @@
-.header-br {
+.header {
   border: $headborder;
 }
 //logo
-.main-nav__logo {
+.logo {
   color: $accent-color;
   font-family: Raleway, Helvetica, sans-serif;
   font-weight: bold;
@@ -10,7 +10,7 @@
   line-height: 1.19;
   letter-spacing: 0.03em;
   text-decoration: none;
-  .main-nav__title {
+  .logo__title {
     color: $title-text-color;
   }
 }
@@ -25,6 +25,14 @@
 }
 // site-nav
 .site-nav {
+  &:active {
+    color: $primaty-text-color;
+  }
+  &__link:hover,
+  &__link:focus {
+    color: $accent-color;
+    outline: none;
+  }
   &__link {
     display: block;
     padding-top: 32px;
@@ -32,36 +40,23 @@
   }
   display: flex;
   margin-left: 93px;
-}
-.site-nav {
-  &:active {
-    color: $primaty-text-color;
-  }
-}
-.site-nav {
-  &__link:hover,
-  &__link:focus {
-    color: $accent-color;
-    outline: none;
-  }
-}
-.site-nav__link {
-  &:active {
-    color: $accent-color;
+  &__link:hover::after,
+  &__link:focus::after {
+    opacity: 1;
   }
 }
 
-.site-nav__navigation {
+.site-nav__item {
   &:not(:first-child) {
     margin-left: 50px;
   }
+  position: relative;
 }
+
 .site-nav__link {
   &:active {
     color: $accent-color;
   }
-}
-.site-nav__link {
   text-decoration: none;
   font-weight: 500;
   font-size: 14px;
@@ -69,18 +64,6 @@
   letter-spacing: 0.02em;
   color: $title-text-color;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.main-contact__link {
-  display: flex;
-  color: $primaty-text-color;
-  text-decoration: none;
-  align-items: center;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.site-nav__navigation {
-  position: relative;
-}
-.site-nav__link {
   &::after {
     position: absolute;
     display: inline-block;
@@ -94,13 +77,8 @@
     opacity: 0;
   }
 }
-.site-nav {
-  &__link:hover::after,
-  &__link:focus::after {
-    opacity: 1;
-  }
-}
-.currnet {
+
+.current {
   color: $accent-color;
   &::after {
     position: absolute;
@@ -115,6 +93,13 @@
     opacity: 1;
   }
 }
+.main-contact__link {
+  display: flex;
+  color: $primaty-text-color;
+  text-decoration: none;
+  align-items: center;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .main-contact {
   color: $primaty-text-color;
   font-weight: 500;
@@ -126,8 +111,14 @@
   align-items: center;
 }
 .main-contact {
-  &__list + &__list {
+  &__item + &__item {
     margin-left: 50px;
+  }
+  &__link:hover > &__icon {
+    fill: #2196f3;
+  }
+  &__link:focus > &__icon {
+    fill: #2196f3;
   }
 }
 .main-contact__icon {
@@ -140,13 +131,5 @@
   &:focus {
     color: $accent-color;
     outline: none;
-  }
-}
-.main-contact {
-  &__link:hover > &__icon {
-    fill: #2196f3;
-  }
-  &__link:focus > &__icon {
-    fill: #2196f3;
   }
 }
