--- a/sass/components/footer/_logo-footer.scss
+++ b/sass/components/footer/_logo-footer.scss
@@ -1,4 +1,4 @@
-.footer-addres__logo {
+.footer__logo {
   color: $accent-color;
   font-family: Raleway, Helvetica, sans-serif;
   font-weight: bold;
@@ -8,7 +8,7 @@
   text-decoration: none;
 }
 
-.footer-addres__title {
+.footer-logo__title {
   color: $primary-bg-color;
   font-family: Raleway, Helvetica, sans-serif;
   font-weight: bold;
@@ -25,7 +25,7 @@
   }
 }
 
-.contact-footer {
+.contact-footer__list {
   font-weight: normal;
   font-size: 14px;
   line-height: 1.71;
@@ -33,7 +33,7 @@
   color: $footer-color;
 }
 
-.address-content__contact {
+.address-box__title {
   color: $primary-bg-color;
   font-style: normal;
   font-weight: normal;
@@ -60,9 +60,9 @@
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact-footer-list {
+.contact-footer-item {
   margin-top: 9px;
 }
-.address-content {
+.address-box {
   margin-top: 20px;
 }
