--- a/sass/components/portfolio/_button.scss
+++ b/sass/components/portfolio/_button.scss
@@ -4,7 +4,7 @@
   margin-bottom: 50px;
 }
 .button-portfolio {
-  &__list + &__list {
+  &__item + &__item {
     margin-left: 8px;
   }
 }
@@ -19,20 +19,12 @@
   transition-property: background-color, color, box-shadow;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.button-portfolio__filters {
   &:hover,
   &:focus {
     color: $primary-bg-color;
     background-color: $accent-color;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
       0px 2px 2px rgba(0, 0, 0, 0.12);
-  }
-}
-
-.button-portfolio__filters {
-  &:focus {
     outline: none;
   }
 }
