--- a/sass/components/portfolio/_projects.scss
+++ b/sass/components/portfolio/_projects.scss
@@ -4,27 +4,17 @@
   margin-left: calc(-1 * 30px);
   margin-top: calc(-1 * 30px);
 }
-.card-content__work {
-  color: $title-text-color;
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
 
-  margin-bottom: 4px;
+.card-set > .card-set__item {
+  flex-basis: calc(100% / 3 -30px);
+  margin-left: 30px;
+  margin-top: 30px;
 }
-.card-content__title {
-  color: $primaty-text-color;
-  font-size: 16px;
-  line-height: 1.8;
-  letter-spacing: 0.03em;
-}
+
 .projects {
   display: block;
   max-width: 100%;
   position: relative;
-}
-.projects {
   & > a {
     text-decoration: none;
     display: block;
@@ -36,24 +26,30 @@
     z-index: 1;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-}
-.projects {
   & > a:hover,
   & > a:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
   }
-}
-.projects {
   & > a:focus {
     outline: none;
   }
+  & > a:hover + &__card::before,
+  & > a:focus + &__card::before {
+    opacity: 1;
+    transform: translateY(0);
+  }
+
+  & :hover + &__card &__title,
+  & :focus + &__card &__title {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
+
 .projects__card {
   position: relative;
   overflow: hidden;
-}
-.projects__card {
   &::before {
     position: absolute;
     display: inline-block;
@@ -69,13 +65,7 @@
       transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
-.projects {
-  & > a:hover + &__card::before,
-  & > a:focus + &__card::before {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
+
 .projects__title {
   opacity: 0;
   position: absolute;
@@ -90,22 +80,26 @@
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.projects {
-  & :hover + &__card &__title,
-  & :focus + &__card &__title {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-.card-set > .card-set__item {
-  flex-basis: calc(100% / 3 -30px);
-  margin-left: 30px;
-  margin-top: 30px;
-}
-.card-content {
+
+.projects__box {
   padding-top: 20px;
   padding-right: 23px;
   padding-bottom: 20px;
   padding-left: 23px;
   border: 1px solid #eeeeee;
+}
+.projects-box__description {
+  color: $title-text-color;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+
+  margin-bottom: 4px;
+}
+.projects-box__title {
+  color: $primaty-text-color;
+  font-size: 16px;
+  line-height: 1.8;
+  letter-spacing: 0.03em;
 }
