--- a/sass/main.css
+++ b/sass/main.css
@@ -746,20 +746,20 @@ body {
           align-items: baseline;
 }
 
-.footer-link {
+.footer-box {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: start;
   margin-left: 70px;
 }
 
-.footer-link__social {
+.footer-box__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.footer-link__titel {
+.footer-box__titel {
   font-weight: bold;
   font-size: 14px;
   line-height: 1.14;
@@ -769,11 +769,11 @@ body {
   margin-bottom: 20px;
 }
 
-.social-footer:not(:first-child) {
+.footer-box__item:not(:first-child) {
   margin-left: 10px;
 }
 
-.social-footer__link {
+.footer-box__link {
   padding: 12px;
   display: block;
   width: 44px;
@@ -785,9 +785,13 @@ body {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-footer__link:hover, .social-footer__link:focus {
+.footer-box__link:hover, .footer-box__link:focus {
   background-color: #2196f3;
   outline: none;
+}
+
+.footer-box__icon {
+  fill: currentColor;
 }
 
 .footer {
@@ -796,7 +800,7 @@ body {
   padding-bottom: 60px;
 }
 
-.footer-addres__logo {
+.footer__logo {
   color: #2196f3;
   font-family: Raleway, Helvetica, sans-serif;
   font-weight: bold;
@@ -806,7 +810,7 @@ body {
   text-decoration: none;
 }
 
-.footer-addres__title {
+.footer-logo__title {
   color: #ffffff;
   font-family: Raleway, Helvetica, sans-serif;
   font-weight: bold;
@@ -820,7 +824,7 @@ body {
   outline: none;
 }
 
-.contact-footer {
+.contact-footer__list {
   font-weight: normal;
   font-size: 14px;
   line-height: 1.71;
@@ -828,7 +832,7 @@ body {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.address-content__contact {
+.address-box__title {
   color: #ffffff;
   font-style: normal;
   font-weight: normal;
@@ -853,11 +857,11 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact-footer-list {
+.contact-footer-item {
   margin-top: 9px;
 }
 
-.address-content {
+.address-box {
   margin-top: 20px;
 }
 
@@ -1238,7 +1242,7 @@ body {
   margin-bottom: 50px;
 }
 
-.button-portfolio__list + .button-portfolio__list {
+.button-portfolio__item + .button-portfolio__item {
   margin-left: 8px;
 }
 
@@ -1264,9 +1268,6 @@ body {
   background-color: #2196f3;
   -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
-.button-portfolio__filters:focus {
   outline: none;
 }
 
@@ -1280,20 +1281,11 @@ body {
   margin-top: calc(-1 * 30px);
 }
 
-.card-content__work {
-  color: #212121;
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-  margin-bottom: 4px;
-}
-
-.card-content__title {
-  color: #757575;
-  font-size: 16px;
-  line-height: 1.8;
-  letter-spacing: 0.03em;
+.card-set > .card-set__item {
+  -ms-flex-preferred-size: calc(100% / 3 -30px);
+      flex-basis: calc(100% / 3 -30px);
+  margin-left: 30px;
+  margin-top: 30px;
 }
 
 .projects {
@@ -1327,6 +1319,20 @@ body {
   outline: none;
 }
 
+.projects > a:hover + .projects__card::before,
+.projects > a:focus + .projects__card::before {
+  opacity: 1;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
+.projects :hover + .projects__card .projects__title,
+.projects :focus + .projects__card .projects__title {
+  opacity: 1;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
 .projects__card {
   position: relative;
   overflow: hidden;
@@ -1350,13 +1356,6 @@ body {
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.projects > a:hover + .projects__card::before,
-.projects > a:focus + .projects__card::before {
-  opacity: 1;
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
-}
-
 .projects__title {
   opacity: 0;
   position: absolute;
@@ -1375,25 +1374,27 @@ body {
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.projects :hover + .projects__card .projects__title,
-.projects :focus + .projects__card .projects__title {
-  opacity: 1;
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
-}
-
-.card-set > .card-set__item {
-  -ms-flex-preferred-size: calc(100% / 3 -30px);
-      flex-basis: calc(100% / 3 -30px);
-  margin-left: 30px;
-  margin-top: 30px;
-}
-
-.card-content {
+.projects__box {
   padding-top: 20px;
   padding-right: 23px;
   padding-bottom: 20px;
   padding-left: 23px;
   border: 1px solid #eeeeee;
+}
+
+.projects-box__description {
+  color: #212121;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  margin-bottom: 4px;
+}
+
+.projects-box__title {
+  color: #757575;
+  font-size: 16px;
+  line-height: 1.8;
+  letter-spacing: 0.03em;
 }
 /*# sourceMappingURL=main.css.map */
